--- a/admin.html
+++ b/admin.html
@@ -59,7 +59,7 @@
                 const name = document.querySelector('.name').value;
                 const password = document.querySelector('.password').value;
     
-                if (name === 'derniyoutube' && password === 'DerNIP76)') {
+                if (name === '' && password === ')') {
                     background.style.display = 'none';
                     content.classList.add('active');
                 } else {
